# Conecsa-System-Vision

./: .dockerignore  .gitignore  README.md  TRADEMARKS.md  docker-compose.dev.yml  docker-compose.yml  pyrightconfig.json  requirements-dev.txt
api-gateway/: .gitignore  Dockerfile.api-gateway  Dockerfile.api-gateway.dockerignore  main.py  pyproject.toml  requirements.txt
api-gateway/deploy/: conecsa-hub.avahi.service
api-gateway/gateway/: __init__.py  app.py  config.py  discovery.py  enroll.py  events.py  grpc_clients.py  hardware.py  helpers.py  media.py
api-gateway/gateway/controllers/: __init__.py  aliases.py  areas.py  camera.py  classes.py  detection.py  gpio.py  models.py  network.py  streams.py  system.py  trigger.py
api-gateway/gateway/proto/: __init__.py
api-gateway/gateway/training/: __init__.py  datasets.py  helpers.py  images.py  jobs.py  orphan.py  sam.py  session.py  weights.py
api-gateway/tests/: conftest.py  test_camera_gate.py  test_config.py  test_detection_backlog.py  test_detection_sam_unload.py  test_enroll.py  test_events.py  test_hardware_mapper.py  test_helpers.py  test_media.py  test_orphan.py  test_training_helpers.py  test_training_mappers.py  test_training_session.py
inference-service/: .gitignore  Dockerfile.inference-service  Dockerfile.inference-service.dockerignore  main.py  pyproject.toml  requirements.txt
inference-service/api/: composition.py  config.py  inference_grpc.py  model_manager.py  utils.py  yolo_detector.py
inference-service/api/models/: __init__.py  detection_models.py
inference-service/api/repositories/: __init__.py  class_labels_repository.py
inference-service/api/runtime_management/: __init__.py  _pt_onnx_converter.py  _trt_engine_builder.py  base_runtime.py  remote_runtime.py  runtime_factory.py  tensorrt_interpreter.py  tensorrt_runtime.py  worker_client.py  worker_server.py
inference-service/api/services/: __init__.py  config_service.py  consumer_service.py  conversion_service.py  detection_area_service.py  detection_buffer.py  detection_service.py  event_service.py  frame_codec.py  gpio_service.py  gpio_shm.py  model_service.py  model_settings_service.py  processing_pipeline.py  stats_service.py  video_service.py
inference-service/api/views/: __init__.py  area_overlay.py  detection_boxes.py  overlay_renderer.py
inference-service/tests/: conftest.py  test_camera_gate.py  test_class_labels_repository.py  test_config.py  test_config_service.py  test_conversion_service.py  test_detection_area_service.py  test_detection_boxes.py  test_detection_buffer.py  test_detection_models.py  test_detection_snapshot.py  test_event_service.py  test_frame_codec.py  test_model_service.py  test_model_settings_service.py  test_overlay_renderer.py  test_stats_service.py  test_utils.py  test_yolo_detector.py
os-base/: Dockerfile.os-base  Dockerfile.os-base.dev  Dockerfile.os-base.dev.dockerignore  Dockerfile.os-base.dockerignore  pyproject.toml  requirements-common.txt
os-base/agent/: __init__.py  __main__.py  clocks_agent.py  gpio_agent.py  gpio_backend.py  gpio_shm.py  network_agent.py  networkd.py  requirements.txt  server.py  system_agent.py  wpa.py
os-base/conecsa_shm/: __init__.py  camera_ring.py  processed_ring.py  stereo.py
system-vision/: .gitignore  Cargo.toml  Dockerfile.system-vision  Dockerfile.system-vision.dev  Dockerfile.system-vision.dev.dockerignore  Dockerfile.system-vision.dockerignore  Trunk.toml  build.rs  index.html  styles.css
system-vision/config/: entrypoint.sh  maps.conf  nginx-enforcing.conf  nginx-enroll.conf  nginx.conf
system-vision/public/: opencv-processor.js
system-vision/src/: app.rs  class_color.rs  lib.rs  main.rs  models.rs
system-vision/src/api/: mod.rs  tests.rs
system-vision/src/api/wasm32/: http.rs  mod.rs
system-vision/src/app/: tests.rs
system-vision/src/class_color/: tests.rs
system-vision/src/components/: access.rs  flow.rs  locale.rs  mod.rs  view_navigation.rs
system-vision/src/components/camera_settings/: apply_button.rs  component.rs  device_select.rs  loading_state.rs  mod.rs  resolution_controls.rs  stereo_toggle.rs
system-vision/src/components/class_names/: actions.rs  class_badge.rs  class_names.rs  editor.rs  list.rs  mod.rs
system-vision/src/components/common/: header.rs  mod.rs  panel_header.rs  power_button.rs
system-vision/src/components/configuration/: configuration.rs  conversion_overlay.rs  mod.rs  model_conversion.rs  threshold_slider.rs
system-vision/src/components/control_panel/: control_panel.rs  detection_toggle_button.rs  mod.rs  nav_button.rs  status_summary.rs
system-vision/src/components/detection_areas/: add_area_button.rs  area_chips.rs  mod.rs
system-vision/src/components/detection_models/: context_menu.rs  detection_models.rs  mod.rs  model_list.rs  section_header.rs
system-vision/src/components/editing_toolbar/: editing_toolbar.rs  mod.rs  toolbar_icon.rs
system-vision/src/components/image_adjust_overlay/: exposure_control.rs  image_adjust_overlay.rs  mod.rs  panel.rs  (+3 more)
system-vision/src/models/: tests.rs
system-vision/src/proto/: detection.rs  mod.rs  tests.rs
training-service/: Dockerfile.training-service  Dockerfile.training-service.dockerignore  main.py  pyproject.toml  requirements.txt
training-service/service/: __init__.py  _sam_worker.py  _weights_averager.py  _yolo_trainer.py  capture_service.py  composition.py  config.py  dataset_import.py  dataset_registry.py  dataset_service.py  event_service.py  sam_service.py  training_grpc.py  training_service.py  weights_store.py
training-service/tests/: conftest.py  test_capture_service.py  test_config.py  test_dataset_import.py  test_dataset_registry.py  test_dataset_service.py  test_event_service.py  test_sam_worker.py  test_shard_export.py  test_training_service.py  test_weights_averager.py  test_weights_store.py
webcam-server/: .gitignore  Cargo.toml  Dockerfile.webcam-server  Dockerfile.webcam-server.dockerignore  build.rs
webcam-server/src/: main.rs  webcam_server.rs
webcam-server/src/webcam_server/: capture.rs  config.rs  processing.rs  shm.rs
(+234 files in other folders)
