[package]
name = "conecsa-system-vision"
version = "2026.2.0"
description = "Conecsa Object Detection Application"
license = "MIT"
authors = ["Conecsa Automação"]
edition = "2024"

# Designed and developed by Cristiano Leite. https://github.com/CristianosLeite

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Standalone workspace: the system-vision Docker build copies only system-vision/
# (+ proto/), so this crate must not depend on the repo-root virtual manifest.
[workspace]

[lib]
name = "conecsa_system_vision"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
prost-build = "0.14.4"
leptos_i18n_build = { version = "0.6.2", features = ["csr"] }

# ── Shared dependencies ───────────────────────────────────────────────────────
[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
prost = "0.14.4"
bytes = "1.12.1"

# ── WASM/frontend dependencies ────────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
leptos = { version = "0.8.15", features = ["csr"] }
# Default features are disabled on purpose: the `cookie` default would persist
# the locale in a cookie, fighting the ?lang= + localStorage scheme used here.
leptos_i18n = { version = "0.6.2", default-features = false, features = [
    "csr",
    "icu_compiled_data",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
gloo-timers = { version = "0.4", features = ["futures"] }
web-sys = { version = "0.3.83", features = [
    "Window",
    "Location",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Blob",
    "File",
    "FileList",
    "HtmlInputElement",
    "FormData",
    "EventSource",
    "EventTarget",
    "MessageEvent",
    "Element",
    "DomRect",
    "Storage",
    "UrlSearchParams"
] }

# Host-side unit tests run in a headless browser (the crate is wasm32-only), via
# `wasm-pack test --headless --chrome system-vision`. Keep this dependency aligned
# with the `wasm-bindgen` version used by the crate.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
