[package]
name = "webcam-server"
version = "2026.2.0"
edition = "2024"

[[bin]]
name = "webcam_server"
path = "src/main.rs"

[dependencies]
nokhwa = { version = "0.10.11", features = ["input-native"] }
env_logger = "0.11.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
v4l = "0.14.0"
libc = "0.2.186"
prost = "0.14.4"

[build-dependencies]
prost-build = "0.14.4"

# V4L2 support for ARM64 Linux (Jetson, Raspberry Pi, etc.)
[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
rscam = "0.5"
